
public class AnimationConstString
{
    public const string HURTING = "Hurting";
    public const string RUNNING = "Running";
    public const string JUMPING = "Jumping";
    public const string FALLING = "Falling";
    public const string DEATH = "Death";
    public const string Crouching = "Crouching";

}
